tests/test_output_v.txt
============================= test session starts ==============================
platform darwin -- Python 3.12.0, pytest-9.0.3, pluggy-1.6.0 -- /Users/laxmanacharya/Desktop/BhavCopy/Dashboard/.venv/bin/python
cachedir: .pytest_cache
rootdir: /Users/laxmanacharya/Desktop/BhavCopy/Dashboard
plugins: mock-3.15.1
collecting ... collected 26 items

tests/test_nde_logic.py::test_metadata_resolution_order FAILED           [  3%]
tests/test_nde_logic.py::test_list_available_chains_no_deletion PASSED   [  7%]
tests/test_nde_logic.py::test_explicit_cleanup_behavior PASSED           [ 11%]
tests/test_nde_logic.py::test_tv_ratio_low_vega_stability PASSED         [ 15%]
tests/test_nde_logic.py::test_governance_transition_gate PASSED          [ 19%]
tests/test_nde_logic.py::test_audit_log_schema_fidelity PASSED           [ 23%]
tests/test_nde_logic.py::test_strict_provenance_gate_execution FAILED    [ 26%]
tests/test_nde_logic.py::test_historical_df_missing_fields PASSED        [ 30%]
tests/test_nde_logic.py::test_daily_benchmark_deduplication PASSED       [ 34%]
tests/test_nde_logic.py::test_comparison_benchmarking_logic PASSED       [ 38%]
tests/test_nde_logic.py::test_missing_field_fallback_safety PASSED       [ 42%]
tests/test_nde_logic.py::test_strike_ladder_aggregation_consistency PASSED [ 46%]
tests/test_nde_logic.py::test_level_map_coordinate_ordering PASSED       [ 50%]
tests/test_nde_logic.py::test_strike_ladder_divergence_logic PASSED      [ 53%]
tests/test_nde_logic.py::test_reversion_score_calculation PASSED         [ 57%]
tests/test_nde_logic.py::test_playbook_mapping_rules FAILED              [ 61%]
tests/test_nde_logic.py::test_playbook_guardrails FAILED                 [ 65%]
tests/test_nde_logic.py::test_wait_state_suppresses_execution_strikes FAILED [ 69%]
tests/test_nde_logic.py::test_far_otm_weekly_walls_fail_premium_viability FAILED [ 73%]
tests/test_nde_logic.py::test_playbook_includes_expiry_and_dte PASSED    [ 76%]
tests/test_nde_logic.py::test_gamma_flip_missing_or_zero_not_used_as_invalidation FAILED [ 80%]
tests/test_nde_logic.py::test_gamma_flip_far_from_spot_is_context_not_trigger FAILED [ 84%]
tests/test_nde_logic.py::test_day_open_governance_uses_yesterday_state PASSED [ 88%]
tests/test_nde_logic.py::test_non_trade_actions_suppress_strikes FAILED  [ 92%]
tests/test_nde_logic.py::test_directional_debit_returns_debit_legs FAILED [ 96%]
tests/test_nde_logic.py::test_strategy_specific_viability_checks FAILED  [100%]

=================================== FAILURES ===================================
________________________ test_metadata_resolution_order ________________________

temp_data_dir = {'automation': PosixPath('/private/var/folders/zr/m1pwdpwx5zvd3vrj3htqzd5w0000gn/T/pytest-of-laxmanacharya/pytest-37/t...m1pwdpwx5zvd3vrj3htqzd5w0000gn/T/pytest-of-laxmanacharya/pytest-37/test_metadata_resolution_order0/data/option_chain')}
mock_option_chain = (   strike  type      oi    iv  ...  volume  oi_chng       expiry  t_days
0   22400  call  100000  15.0  ...    5000  ...9   22600   put  100000  15.0  ...    5000     1000  27-Apr-2026     2.0

[10 rows x 13 columns], 22500, '27-Apr-2026')

    def test_metadata_resolution_order(temp_data_dir, mock_option_chain):
        """Verifies fallback order: spot_at_fetch -> spot -> fallback."""
        oc_dir = temp_data_dir["option_chain"]
        df, spot, expiry = mock_option_chain
    
        filename = "test_chain.csv"
        csv_path = oc_dir / filename
        df.to_csv(csv_path)
    
        # Case 1: Metadata exists with spot_at_fetch
        meta_path = oc_dir / "test_chain_meta.json"
        with open(meta_path, "w") as f:
            json.dump({"spot_at_fetch": 22600.0}, f)
    
        # We patch load_latest_option_chain_csv to return our test file
        import nde_options_logic
        orig_load = nde_options_logic.load_latest_option_chain_csv
        nde_options_logic.load_latest_option_chain_csv = lambda: (df, filename, datetime.now(), expiry)
    
        # We also mock data_fetch.batch_download to avoid network calls
        import data_fetch
        orig_batch = data_fetch.batch_download
        data_fetch.batch_download = lambda symbols, period: {"^NSEI": pd.DataFrame()}
    
        try:
            # Should pick 22600.0 from meta
            snap = nde_automation_logic.generate_auto_snapshot()
            # Verify using compute logic directly if needed, or by checking snapshot output
>           with open(snap, "r") as f:
                 ^^^^^^^^^^^^^^^
E           TypeError: expected str, bytes or os.PathLike object, not NoneType

tests/test_nde_logic.py:100: TypeError
------------------------------ Captured log call -------------------------------
ERROR    nde_automation_logic:nde_automation_logic.py:598 ❌ Failed to generate automated NDE snapshot: too many values to unpack (expected 2)
____________________ test_strict_provenance_gate_execution _____________________

temp_data_dir = {'automation': PosixPath('/private/var/folders/zr/m1pwdpwx5zvd3vrj3htqzd5w0000gn/T/pytest-of-laxmanacharya/pytest-37/t...m1pwdpwx5zvd3vrj3htqzd5w0000gn/T/pytest-of-laxmanacharya/pytest-37/test_strict_provenance_gate_ex0/data/option_chain')}
mock_option_chain = (   strike  type      oi    iv  ...  volume  oi_chng       expiry  t_days
0   22400  call  100000  15.0  ...    5000  ...9   22600   put  100000  15.0  ...    5000     1000  27-Apr-2026     2.0

[10 rows x 13 columns], 22500, '27-Apr-2026')
mocker = <pytest_mock.plugin.MockerFixture object at 0x114ee9d30>

    def test_strict_provenance_gate_execution(temp_data_dir, mock_option_chain, mocker):
        """Verifies that automation prefers stale high-trust metadata and blocks low-trust fallbacks."""
        oc_dir = temp_data_dir["option_chain"]
        fname = "option-chain-ED-sensi-NIFTY-28-Apr-2026.csv"
        csv_file = oc_dir / fname
        meta_file = oc_dir / fname.replace(".csv", "_meta.json")
    
        df, _, _ = mock_option_chain
    
        # 1. Setup stale HIGH trust metadata (20 hours old)
        stale_time = datetime.now().timestamp() - (20 * 3600)
        meta_file.write_text(json.dumps({
            "source_mode": "SENSIBULL_VENDOR_GREEKS",
            "conversion_time": stale_time,
            "spot_at_fetch": 22600
        }))
    
        import nde_options_logic
        orig_load = nde_options_logic.load_latest_option_chain_csv
        nde_options_logic.load_latest_option_chain_csv = lambda: (df, fname, stale_time, "UNKNOWN")
    
        # We also mock data_fetch.batch_download to avoid network calls
        import data_fetch
        mock_live = mocker.patch("data_fetch.batch_download", return_value={"^NSEI": pd.DataFrame({"Close": [23000.0]}, index=[datetime.now()])})
    
        import nde_automation_logic
        # We need to ensure nde_automation_logic uses our temp_data_dir
        mocker.patch("nde_automation_logic.OPTION_CHAIN_DIR", oc_dir)
    
        try:
            # Run automation logic for this file
            res_path = nde_automation_logic.generate_auto_snapshot()
>           with open(res_path, "r") as f:
                 ^^^^^^^^^^^^^^^^^^^
E           TypeError: expected str, bytes or os.PathLike object, not NoneType

tests/test_nde_logic.py:295: TypeError
------------------------------ Captured log call -------------------------------
ERROR    nde_automation_logic:nde_automation_logic.py:598 ❌ Failed to generate automated NDE snapshot: too many values to unpack (expected 2)
_________________________ test_playbook_mapping_rules __________________________

    def test_playbook_mapping_rules():
        """Verifies strategy playbook mappings for different regimes."""
        # Mock raw_exp for viability
        raw_exp = pd.DataFrame([
            {"strike": 22700, "type": "CALL", "ltp": 50.0, "oi": 50000},
            {"strike": 22300, "type": "PUT", "ltp": 50.0, "oi": 50000}
        ])
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "NORMAL", "flow_regime_label": "Long Gamma", "raw_exposures": raw_exp}
        auto_metrics = {"drift": 0.05, "stability": 70}
        spot = 22500
        walls = (22700, 22300)
        iv_data = {"iv_rank": 45.0}
        quality_score = 8.5
        size = 1.0
        bias_obj = {"bias": "Bullish"}
        rev_score_obj = {"score": 7.5, "label": "HIGH_REVERSION", "reason": ["Away from flip"]}
    
        # 1. Long Gamma + Mid-range (Stability 70 < 75) -> WAIT
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, spot, walls, iv_data,
            quality_score, size, bias_obj, rev_score_obj, dte=3
        )
        assert playbook["action"] == "WAIT"
>       assert "Wait for Extremes" in playbook["strategy"]
E       AssertionError: assert 'Wait for Extremes' in 'MEAN_REVERSION'

tests/test_nde_logic.py:550: AssertionError
___________________________ test_playbook_guardrails ___________________________

    def test_playbook_guardrails():
        """Verifies Phase 47 strict guardrails."""
        raw_exp = pd.DataFrame([
            {"strike": 22700, "type": "CALL", "ltp": 50.0, "oi": 50000},
            {"strike": 22300, "type": "PUT", "ltp": 50.0, "oi": 50000}
        ])
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "NORMAL", "gamma_flip_level": 22480, "raw_exposures": raw_exp}
        auto_metrics = {"drift": 0.05, "stability": 80}
        spot = 22500
        walls = (22700, 22300)
        iv_data = {"iv_rank": 45.0}
        quality_score = 8.5
        size = 1.0
        bias_obj = {"bias": "Bullish"}
        rev_score_obj = {"score": 7.5, "label": "HIGH_REVERSION"}
    
        # 1. Gamma Flip Guardrail (Spot 22500 vs Flip 22480 = < 0.2% dist)
>       playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, spot, walls, iv_data,
            quality_score, size, bias_obj, rev_score_obj
        )

tests/test_nde_logic.py:593: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
nde_strategy_logic.py:1602: in generate_strategy_playbook
    time_decay = get_time_decay_outlook(dte, iv_data.get("iv_rank", 50.0), vol_regime)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

dte = None, iv_rank = 45.0, vol_regime = 'NORMAL'

    def get_time_decay_outlook(dte: int, iv_rank: float, vol_regime: str) -> str:
        """Determine Time Decay quality (Strong/Moderate/Weak)."""
        if vol_regime == "EXPLOSIVE": return "Weak (Risk > Decay)"
>       if dte <= 2 and iv_rank > 40: return "Strong (Terminal Gamma + IV Rank)"
           ^^^^^^^^
E       TypeError: '<=' not supported between instances of 'NoneType' and 'int'

nde_strategy_logic.py:362: TypeError
_________________ test_wait_state_suppresses_execution_strikes _________________

    def test_wait_state_suppresses_execution_strikes():
        """Verifies that WAIT state suppresses executable strikes."""
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "NORMAL"}
        auto_metrics = {"drift": 0.05, "stability": 70}
        spot = 24250
        walls = (26000, 23000)
>       playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, spot, walls, {},
            8.5, 1.0, {"bias": "Neutral"}, {"score": 5.0, "label": "WAIT"}
        )

tests/test_nde_logic.py:643: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
nde_strategy_logic.py:1602: in generate_strategy_playbook
    time_decay = get_time_decay_outlook(dte, iv_data.get("iv_rank", 50.0), vol_regime)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

dte = None, iv_rank = 50.0, vol_regime = 'NORMAL'

    def get_time_decay_outlook(dte: int, iv_rank: float, vol_regime: str) -> str:
        """Determine Time Decay quality (Strong/Moderate/Weak)."""
        if vol_regime == "EXPLOSIVE": return "Weak (Risk > Decay)"
>       if dte <= 2 and iv_rank > 40: return "Strong (Terminal Gamma + IV Rank)"
           ^^^^^^^^
E       TypeError: '<=' not supported between instances of 'NoneType' and 'int'

nde_strategy_logic.py:362: TypeError
_______________ test_far_otm_weekly_walls_fail_premium_viability _______________

    def test_far_otm_weekly_walls_fail_premium_viability():
        """Verifies that low premium OTM walls block execution."""
        raw_exp = pd.DataFrame([
            {"strike": 26000, "type": "CALL", "ltp": 2.0, "oi": 10000},
            {"strike": 23000, "type": "PUT", "ltp": 3.0, "oi": 10000}
        ])
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "NORMAL", "raw_exposures": raw_exp}
        auto_metrics = {"drift": 0.1, "stability": 80}
        spot = 24250
        walls = (26000, 23000)
        # Spot near wall (27950) would trigger FADE_RESISTANCE
        # Wall is at 28000. dist = 50. dist% = 0.17%. Passes dist check.
        # But LTP 2.0 < 5.0 on weekly (DTE 3) -> Should block if we enforce min_premium.
        # Wait, if dist is small, it PASSES. I need to be far away.
        # Spot = 24250, Wall = 26000. dist% = 7.2%.
        # To trigger mapping, I need to be near wall.
        # OK, let's use: Spot = 25950, Wall = 26000. dist% = 0.19%.
        # This won't trigger the distance-based premium block.
        # I need to test the distance-based block: dist > 7% AND ltp < 5.
        # But FADE is only triggered when NEAR wall.
        # So FADE_RESISTANCE will only check viability when near.
        # If we are NEAR, we don't care about the 7% rule.
        # BUT we still have the absolute floor ltp < 1.0.
    
        # Spot near wall (25950) would trigger FADE_RESISTANCE (wall at 26000)
        # But LTP 0.5 < 1.0 (absolute floor) -> Should block and revert to WAIT with suffix.
        raw_exp = pd.DataFrame([
            {"strike": 26000, "type": "CALL", "ltp": 0.5, "oi": 10000},
            {"strike": 23000, "type": "PUT", "ltp": 3.0, "oi": 10000}
        ])
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "NORMAL", "raw_exposures": raw_exp}
        playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, auto_metrics, 25950, (26000, 23000), {},
            8.5, 1.0, {"bias": "Neutral"}, {"score": 5.0}, dte=3
        )
        assert playbook["action"] == "WAIT"
>       assert "blocked by premium" in playbook["strategy"]
E       AssertionError: assert 'blocked by premium' in 'MEAN_REVERSION'

tests/test_nde_logic.py:689: AssertionError
___________ test_gamma_flip_missing_or_zero_not_used_as_invalidation ___________

    def test_gamma_flip_missing_or_zero_not_used_as_invalidation():
        """Verifies that invalid or zero flip is not used as trigger."""
        gamma_metrics = {"gamma_flip_level": 0}
>       playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, {}, 22500, (22700, 22300), {},
            8.0, 1.0, {}, {}
        )

tests/test_nde_logic.py:705: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
nde_strategy_logic.py:1602: in generate_strategy_playbook
    time_decay = get_time_decay_outlook(dte, iv_data.get("iv_rank", 50.0), vol_regime)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

dte = None, iv_rank = 50.0, vol_regime = 'NORMAL'

    def get_time_decay_outlook(dte: int, iv_rank: float, vol_regime: str) -> str:
        """Determine Time Decay quality (Strong/Moderate/Weak)."""
        if vol_regime == "EXPLOSIVE": return "Weak (Risk > Decay)"
>       if dte <= 2 and iv_rank > 40: return "Strong (Terminal Gamma + IV Rank)"
           ^^^^^^^^
E       TypeError: '<=' not supported between instances of 'NoneType' and 'int'

nde_strategy_logic.py:362: TypeError
_____________ test_gamma_flip_far_from_spot_is_context_not_trigger _____________

    def test_gamma_flip_far_from_spot_is_context_not_trigger():
        """Verifies that far-away flip is context only."""
        spot = 24250
        flip = 22000 # > 3% away
        gamma_metrics = {"gamma_flip_level": flip}
>       playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, {}, spot, (26000, 23000), {},
            8.0, 1.0, {}, {}
        )

tests/test_nde_logic.py:716: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
nde_strategy_logic.py:1602: in generate_strategy_playbook
    time_decay = get_time_decay_outlook(dte, iv_data.get("iv_rank", 50.0), vol_regime)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

dte = None, iv_rank = 50.0, vol_regime = 'NORMAL'

    def get_time_decay_outlook(dte: int, iv_rank: float, vol_regime: str) -> str:
        """Determine Time Decay quality (Strong/Moderate/Weak)."""
        if vol_regime == "EXPLOSIVE": return "Weak (Risk > Decay)"
>       if dte <= 2 and iv_rank > 40: return "Strong (Terminal Gamma + IV Rank)"
           ^^^^^^^^
E       TypeError: '<=' not supported between instances of 'NoneType' and 'int'

nde_strategy_logic.py:362: TypeError
___________________ test_non_trade_actions_suppress_strikes ____________________

    def test_non_trade_actions_suppress_strikes():
        """Verifies that STAND ASIDE, HEDGE_ONLY, etc. suppress strikes."""
        gamma_metrics = {"gex_norm": 5.0, "tv_label": "AVOID"} # Forces STAND ASIDE
>       playbook = nde_strategy_logic.generate_strategy_playbook(
            "MEAN_REVERSION", gamma_metrics, {}, 22500, (22700, 22300), {},
            8.0, 1.0, {}, {}
        )

tests/test_nde_logic.py:750: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
nde_strategy_logic.py:1602: in generate_strategy_playbook
    time_decay = get_time_decay_outlook(dte, iv_data.get("iv_rank", 50.0), vol_regime)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

dte = None, iv_rank = 50.0, vol_regime = 'NORMAL'

    def get_time_decay_outlook(dte: int, iv_rank: float, vol_regime: str) -> str:
        """Determine Time Decay quality (Strong/Moderate/Weak)."""
        if vol_regime == "EXPLOSIVE": return "Weak (Risk > Decay)"
>       if dte <= 2 and iv_rank > 40: return "Strong (Terminal Gamma + IV Rank)"
           ^^^^^^^^
E       TypeError: '<=' not supported between instances of 'NoneType' and 'int'

nde_strategy_logic.py:362: TypeError
__________________ test_directional_debit_returns_debit_legs ___________________

    def test_directional_debit_returns_debit_legs():
        """Verifies that FOLLOW_TREND returns debit spread schema."""
        raw_exp = pd.DataFrame([
            {"strike": 24250, "type": "CALL", "ltp": 50.0, "oi": 50000},
            {"strike": 24350, "type": "CALL", "ltp": 20.0, "oi": 50000}
        ])
        gamma_metrics = {"gex_norm": -5.0, "raw_exposures": raw_exp} # Negative Gamma
        auto_metrics = {"drift": 0.5} # Strong Trend
>       playbook = nde_strategy_logic.generate_strategy_playbook(
            "FOLLOW_TREND", gamma_metrics, auto_metrics, 24240, (26000, 23000), {},
            8.5, 1.0, {}, {}
        )

tests/test_nde_logic.py:766: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
nde_strategy_logic.py:1602: in generate_strategy_playbook
    time_decay = get_time_decay_outlook(dte, iv_data.get("iv_rank", 50.0), vol_regime)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

dte = None, iv_rank = 50.0, vol_regime = 'NORMAL'

    def get_time_decay_outlook(dte: int, iv_rank: float, vol_regime: str) -> str:
        """Determine Time Decay quality (Strong/Moderate/Weak)."""
        if vol_regime == "EXPLOSIVE": return "Weak (Risk > Decay)"
>       if dte <= 2 and iv_rank > 40: return "Strong (Terminal Gamma + IV Rank)"
           ^^^^^^^^
E       TypeError: '<=' not supported between instances of 'NoneType' and 'int'

nde_strategy_logic.py:362: TypeError
___________________ test_strategy_specific_viability_checks ____________________

    def test_strategy_specific_viability_checks():
        """Verifies that FADE_RESISTANCE only checks call wall viability."""
        # Call wall illiquid, Put wall liquid
        raw_exp = pd.DataFrame([
            {"strike": 22700, "type": "CALL", "ltp": 0.5, "oi": 100}, # Illiquid
            {"strike": 22300, "type": "PUT", "ltp": 50.0, "oi": 50000} # Liquid
        ])
        gamma_metrics = {"gex_norm": 5.0, "raw_exposures": raw_exp}
    
        # FADE_RESISTANCE should FAIL (checks call wall)
>       playbook = nde_strategy_logic.generate_strategy_playbook(
            "FADE_RESISTANCE", gamma_metrics, {}, 22695, (22700, 22300), {},
            8.5, 1.0, {}, {}
        )

tests/test_nde_logic.py:785: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 
nde_strategy_logic.py:1602: in generate_strategy_playbook
    time_decay = get_time_decay_outlook(dte, iv_data.get("iv_rank", 50.0), vol_regime)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ 

dte = None, iv_rank = 50.0, vol_regime = 'NORMAL'

    def get_time_decay_outlook(dte: int, iv_rank: float, vol_regime: str) -> str:
        """Determine Time Decay quality (Strong/Moderate/Weak)."""
        if vol_regime == "EXPLOSIVE": return "Weak (Risk > Decay)"
>       if dte <= 2 and iv_rank > 40: return "Strong (Terminal Gamma + IV Rank)"
           ^^^^^^^^
E       TypeError: '<=' not supported between instances of 'NoneType' and 'int'

nde_strategy_logic.py:362: TypeError
=========================== short test summary info ============================
FAILED tests/test_nde_logic.py::test_metadata_resolution_order - TypeError: expected str, bytes or os.PathLike object, not NoneType
FAILED tests/test_nde_logic.py::test_strict_provenance_gate_execution - TypeError: expected str, bytes or os.PathLike object, not NoneType
FAILED tests/test_nde_logic.py::test_playbook_mapping_rules - AssertionError: assert 'Wait for Extremes' in 'MEAN_REVERSION'
FAILED tests/test_nde_logic.py::test_playbook_guardrails - TypeError: '<=' not supported between instances of 'NoneType' and 'int'
FAILED tests/test_nde_logic.py::test_wait_state_suppresses_execution_strikes - TypeError: '<=' not supported between instances of 'NoneType' and 'int'
FAILED tests/test_nde_logic.py::test_far_otm_weekly_walls_fail_premium_viability - AssertionError: assert 'blocked by premium' in 'MEAN_REVERSION'
FAILED tests/test_nde_logic.py::test_gamma_flip_missing_or_zero_not_used_as_invalidation - TypeError: '<=' not supported between instances of 'NoneType' and 'int'
FAILED tests/test_nde_logic.py::test_gamma_flip_far_from_spot_is_context_not_trigger - TypeError: '<=' not supported between instances of 'NoneType' and 'int'
FAILED tests/test_nde_logic.py::test_non_trade_actions_suppress_strikes - TypeError: '<=' not supported between instances of 'NoneType' and 'int'
FAILED tests/test_nde_logic.py::test_directional_debit_returns_debit_legs - TypeError: '<=' not supported between instances of 'NoneType' and 'int'
FAILED tests/test_nde_logic.py::test_strategy_specific_viability_checks - TypeError: '<=' not supported between instances of 'NoneType' and 'int'
======================== 11 failed, 15 passed in 1.60s =========================
